--- a/projects/index.html
+++ b/projects/index.html
@@ -102,7 +102,7 @@
 <h2 id="in-the-pipeline-publications">In-the-pipeline Publications</h2>
 
 <ol>
-<li><strong>Pasani S</strong>, Viswanath S, <em>A Framework for Stochastic Optimization of Parameters for Integrative Modeling of Macromolecular Assemblies</em> Under review</li>
+<li><strong>Pasani S</strong>, Viswanath S, <em>A Framework for Stochastic Optimization of Parameters for Integrative Modeling of Macromolecular Assemblies</em> Accepted. In Press</li>
 </ol>
 
 <h2 id="projects">Projects</h2>
