--- a/projects/index.html
+++ b/projects/index.html
@@ -96,18 +96,15 @@
       <h2 id="peer-reviewed-publications">Peer-reviewed Publications</h2>
 
 <ol>
-<li><strong>Pasani S</strong>, Sahoo S, Jolly MK. <em>Hybrid E/M Phenotype(s) and Stemness: A Mechanistic Connection Embedded in Network Topology</em>. J Clin Med. 2020 Dec 26;10(1):60. doi: 10.3390/jcm10010060. PMID: 33375334; PMCID: PMC7794989</li>
+<li><strong>Pasani S</strong>, Sahoo S, Jolly MK. <em>Hybrid E/M Phenotype(s) and Stemness: A Mechanistic Connection Embedded in Network Topology</em>. J Clin Med. 2020 doi: 10.3390/jcm10010060</li>
+<li><strong>Pasani S</strong>, Viswanath S, <em>A Framework for Stochastic Optimization of Parameters for Integrative Modeling of Macromolecular Assemblies</em>Life 2021 Nov 11;11 doi: 10.3390/life11111183</li>
 </ol>
 
 <h2 id="in-the-pipeline-publications">In-the-pipeline Publications</h2>
 
-<ol>
-<li><strong>Pasani S</strong>, Viswanath S, <em>A Framework for Stochastic Optimization of Parameters for Integrative Modeling of Macromolecular Assemblies</em> Accepted. In Press</li>
-</ol>
-
 <h2 id="projects">Projects</h2>
 
-<p>Upcoming!</p>
+<p>Upcoming! For now, do explore my GitHub repositories for lots of fun stuff.</p>
 
     </article>
     <span class="print-footer">projects-publications - satwik</span>
